src/App.css
body {
	text-align: center;
	font-family: "Ubuntu", sans-serif;
	background-color: hsla(36, 33%, 97%, 0.634);
}

nav {
	display: flex;
	justify-content: space-between;
	border-bottom: 2px solid black;
	height: 4.688rem;
	div {
		margin: 20px;
	}

	.logo {
		height: 50px;
		line-height: 50px;
		text-align: center;
		position: relative;
		top: -10px;
	}

	.logo img {
		height: 40px;
		margin: 0 6px;
	}
	.pages,
	.logo {
		color: black;
		text-decoration: none;
		margin: 0 10px;
		padding: 0 5px;
		font-size: 20px;
		font-weight: bold;
		border-radius: 5px;
		display: inline-block;
		transition: all 0.3s ease 0s;
	}
	.pages:hover {
		border-bottom: 3px solid rgb(86, 86, 86);
		transform: translateY(-3px);
	}
	.pages span {
		display: inline-block;
		transition: all 0.3s linear 0s;
	}
	.pages span:hover {
		color: rgb(86, 86, 86);
	}
}

.container {
	video {
		width: 100%;
		height: auto;
		display: block;
		border-radius: 8px;
		object-fit: cover;
	}
}

.effect-video {
	position: relative;
	height: 75vh;
	width: 100%;
	overflow: hidden;
	.bg-video {
		background-color: aqua;
		position: absolute;
		top: 0;
		left: 0;
		opacity: 0.2;
		width: 100%;
		height: 100%;
		object-fit: cover;
		z-index: 1;
	}
	.overlay {
		position: absolute;
		top: 50%;
		left: 50%;
		height: 5rem;
		line-height: 5rem;
		transform: translate(-50%, -50%);
		color: black;
		white-space: nowrap;
		overflow: hidden;
		border-right: 3px solid rgba(0, 0, 0, 0.471);
		animation: blinkCursor 1000ms ease infinite forwards alternate;
		z-index: 2;
		text-align: center;
		.typewriter {
			font-family: "Ubuntu", sans-serif;
			font-weight: bolder;
			font-size: 4rem;
			letter-spacing: 0.25rem;
		}
	}
}

@keyframes blinkCursor {
	50% {
		border-color: transparent;
	}
}

.footer {
	height: 35vh;
	width: 100%;
	background-color: #323941;
	color: honeydew;
	text-align: left;
	padding: 20px;
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: space-evenly;
	.email {
		margin-top: -30px;
	}
	.links,
	a {
		color: honeydew;
		text-decoration: none;
		margin: 5px;
	}
	.sociolinks {
		display: flex;
		align-items: center;
		.links {
			margin-top: 2px;
			background-color: #222529;
			font-size: 22px;
			border-radius: 10px;
			height: 40px;
			width: 40px;
			line-height: 40px;
			text-align: center;
			transition: all 0.3s ease;
		}
		.links:hover {
			height: 44px;
			width: 44px;
			line-height: 44px;
			cursor: pointer;
			background-color: #45494f;
		}
	}
}

